src/index.css
  #chessground {
      width: 900px;
      height: 900px;
  }

  #controls {
    display: flex;
    flex-direction: column;
  }

  #controls > button {
    margin: 10px;
  }

  #wrapper {
    display: flex;
  }

  cg-board {
      background-color: #bfcfdd;
  }

  .level {
    font-size: 24px;
    font-weight: bold;
    font-family: 'Courier New', Courier, monospace;
    fill: white;
    transform: translate(45%, 55%);
  }

  .cross {
    fill: black;
    font-size: 80px;
    transform: translate(30%, 70%);
  }

  .level1 {
    fill: red;
  }

  .level2 {
    fill: orange;
  }

  .level3 {
    fill: yellow;
  }

  .level4 {
    fill: green;
  }

